{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 154,
  "lineage": "5fe70e39-03e0-de40-e27a-60ad05b0ec01",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_besu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30303",
                  "8545",
                  "8546",
                  "80",
                  "8080",
                  "9545",
                  "9546"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-20T12:56:30.606-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/caliper-besu/global/firewalls/allow-besu",
            "log_config": [],
            "name": "allow-besu",
            "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
            "priority": 1000,
            "project": "caliper-besu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/firewalls/allow-besu",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "blockchain"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_besu_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30303",
                  "8545",
                  "8546",
                  "80",
                  "8080",
                  "9545",
                  "9546"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-04-20T12:56:30.853-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/caliper-besu/global/firewalls/allow-besu-udp",
            "log_config": [],
            "name": "allow-besu-udp",
            "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
            "priority": 1000,
            "project": "caliper-besu",
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/firewalls/allow-besu-udp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mi_instancia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/disks/node-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-central1-a/instances/node-1",
            "instance_id": "2232404796739527425",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.71.95.95",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.64.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/instances/node-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/disks/node-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-central1-a/instances/node-2",
            "instance_id": "1604468646645179137",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.42.28.76",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.64.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/instances/node-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/disks/node-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-central1-a/instances/node-3",
            "instance_id": "1803419619219317504",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.232.20.133",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.64.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/instances/node-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/disks/node-4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-central1-a/instances/node-4",
            "instance_id": "384343286246646528",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-4",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.4.128",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.64.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-central1/subnetworks/public",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-central1-a/instances/node-4",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mi_instancia_zona_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/disks/node-5"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-east1-b/instances/node-5",
            "instance_id": "4063770764330509057",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-5",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.23.75.238",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.65.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-east1/subnetworks/public-us-east1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/instances/node-5",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/disks/node-6"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-east1-b/instances/node-6",
            "instance_id": "5811912892928860948",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-6",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.154.46",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.65.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-east1/subnetworks/public-us-east1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/instances/node-6",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/disks/node-7"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-east1-b/instances/node-7",
            "instance_id": "2451175535851184916",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-7",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.31.238",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.65.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-east1/subnetworks/public-us-east1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/instances/node-7",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/disks/node-8"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-east1-b/instances/node-8",
            "instance_id": "5848384964932510484",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-8",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.61.233",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.65.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-east1/subnetworks/public-us-east1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-east1-b/instances/node-8",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mi_instancia_zona_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/disks/node-9"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-west1-a/instances/node-9",
            "instance_id": "7332735592394498837",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-9",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.82.198.25",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.66.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-west1/subnetworks/public-us-west1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/instances/node-9",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/disks/node-10"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-west1-a/instances/node-10",
            "instance_id": "1612445844022862592",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-10",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.230.23.241",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.66.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-west1/subnetworks/public-us-west1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/instances/node-10",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/disks/node-11"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-west1-a/instances/node-11",
            "instance_id": "7355005508925367070",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-11",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.78.158",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.66.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-west1/subnetworks/public-us-west1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/instances/node-11",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/disks/node-12"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-west1-a/instances/node-12",
            "instance_id": "902173130754728704",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-12",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.247.75.189",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.66.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-west1/subnetworks/public-us-west1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-west1-a/instances/node-12",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mi_instancia_zona_d",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/disks/node-13"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-south1-a/instances/node-13",
            "instance_id": "8479737661404848322",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-13",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.174.21.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.67.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-south1/subnetworks/public-us-south1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/instances/node-13",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/disks/node-14"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-south1-a/instances/node-14",
            "instance_id": "8168308466080391362",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-14",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.174.23.8",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.67.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-south1/subnetworks/public-us-south1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/instances/node-14",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/disks/node-15"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-south1-a/instances/node-15",
            "instance_id": "1796956221719814338",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-15",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.174.25.104",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.67.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-south1/subnetworks/public-us-south1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/instances/node-15",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240307b",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/disks/node-16"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Milan",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/caliper-besu/zones/us-south1-a/instances/node-16",
            "instance_id": "6198322970176889026",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "t2d-standard-1",
            "metadata_fingerprint": "BNkd1doBtmo=",
            "name": "node-16",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.174.218.136",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/caliper-besu/global/networks/main",
                "network_ip": "10.0.67.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/caliper-besu/regions/us-south1/subnetworks/public-us-south1",
                "subnetwork_project": "caliper-besu"
              }
            ],
            "project": "caliper-besu",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/caliper-besu/zones/us-south1-a/instances/node-16",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-ssh",
              "blockchain",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "DUu0-Oux_PM=",
            "zone": "us-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ]
        }
      ]
    }
  ]
}